--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sickteam-blog
+spring.datasource.url=jdbc:mysql://localhost:3306/sickteam_blog
 spring.datasource.username=root
-spring.datasource.password=Ta0l4m!nh
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
